# parallel-shader-test

./: CMakeLists.txt  README.md  setup-env.sh
src/: main.cpp
src/shaders/: tri-frag.glsl  tri-vert.glsl  tri2-frag.glsl  tri2-vert.glsl
