CMAKE_MINIMUM_REQUIRED( VERSION 3.1 )

SET( CMAKE_CXX_STANDARD 14 )

FIND_PACKAGE( PkgConfig REQUIRED )
pkg_search_module( GLFW3 REQUIRED glfw3 )

FIND_PACKAGE( GLEW REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )

INCLUDE_DIRECTORIES( ${GLFW3_INCLUDE_DIR} 
                     ${GLEW_INCLUDE_DIRS}
                     ${OPENGL_INCLUDE_DIRS} 
                     ${FREETYPE_INCLUDE_DIRS} )

SET( LIBS 
        glfw
        ${GLFW_LIBRARIES} 
        ${GLEW_LIBRARIES} 
        ${OPENGL_LIBRARIES} )

SET( PROJECT_ROOT ${CMAKE_SOURCE_DIR} )
SET( CURR_DIR ${CMAKE_SOURCE_DIR}/src )
SET( CURR_PATH ${CMAKE_SOURCE_DIR}/src )
INCLUDE_DIRECTORIES( ${CURR_DIR} )
CONFIGURE_FILE( ${CURR_DIR}/main.cpp ${CMAKE_BINARY_DIR}/${CURR_DIR}/main.cpp )
ADD_EXECUTABLE( main src/main.cpp )
TARGET_LINK_LIBRARIES( main ${LIBS} )